--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ numpy==1.18.2
 opt-einsum==3.2.0
 pandas==0.25.1
 protobuf==3.11.3
+psycopg2-binary==2.7.7
 pycparser==2.20
 python-dateutil==2.8.1
 pytz==2019.3
