--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dj-database-url==0.5.0
 Django==3.0.5
 django-constrainedfilefield==3.2.0
 ffmpeg-python==0.2.0
+ffprobe==0.5
 future==0.18.2
 gast==0.2.2
 google-pasta==0.2.0
