--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.0.5
 django-constrainedfilefield==3.2.0
+django-heroku==0.3.1
+ffmpeg-python==0.2.0
+ffprobe==0.5
 future==0.18.2
 gast==0.2.2
 google-pasta==0.2.0
@@ -30,7 +33,7 @@ numpy==1.18.2
 opt-einsum==3.2.0
 pandas==0.25.1
 protobuf==3.11.3
-psycopg2-binary==2.7.7
+psycopg2==2.8.5
 pycparser==2.20
 python-dateutil==2.8.1
 pytz==2019.3
